# handler/listOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/matheusbrauna/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List openings
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningHandler(c *gin.Context) {
 	openings := []schemas.Opening{}
 
